# dfglib

./: .gitignore  README.md  appveyor.yml  buildStatus_dfgTest.csv  buildStatus_dfgTestQt.csv  install_build_dependencies_dfgTest.sh
.github/workflows/: ccpp.yml
dfg/: CsvFormatDefinition.hpp  OpaquePtr.hpp  ReadOnlySzParam.hpp  Span.hpp  SzPtr.hpp  SzPtrTypes.hpp  alg.hpp  algAll.hpp  baseConstructorDelegate.hpp  bits.hpp  buildConfig.hpp  chartsAll.hpp  colour.hpp  concurrencyAll.hpp  console.hpp  cont.hpp  contAll.hpp  crypt.hpp  dataAnalysisAll.hpp  debug.hpp  debugAll.hpp  dfgAll.hpp  dfgAssert.hpp  dfgBase.hpp  dfgBaseTypedefs.hpp  dfgCppAll.cpp  dfgDefs.hpp  dfgSimple.hpp  func.hpp  funcAll.hpp  guid.hpp  hash.hpp  io.hpp  ioAll.hpp  isValidIndex.hpp  iter.hpp  iterAll.hpp  iterableForRange.hpp  logging.hpp  math.hpp  (+29 more)
dfg/alg/: arrayCopy.hpp  eraseByTailSwap.hpp  find.hpp  generateAdjacent.hpp  rank.hpp  replaceSubarrays.hpp  sortMultiple.hpp  sortSingleItem.hpp
dfg/bits/: byteSwap.hpp
dfg/charts/: commonChartTools.hpp  operations.hpp
dfg/colour/: defs.hpp  specRendJw.cpp  specRendJw.hpp
dfg/concurrency/: ConditionCounter.hpp  ThreadList.hpp
dfg/cont/: CsvConfig.hpp  Flags.hpp  IntervalSet.hpp  IntervalSetSerialization.hpp  MapToStringViews.hpp  MapVector.hpp  SetVector.hpp  SortedSequence.hpp  TorRef.hpp  TrivialPair.hpp  UniqueResourceHolder.hpp  Vector.hpp  ViewableSharedPtr.hpp  arrayWrapper.hpp  contAlg.hpp  elementType.hpp  elementtype.hpp  interleavedXsortedTwoChannelWrapper.hpp  mapFlat.hpp  setFlat.hpp  table.hpp  tableCsv.hpp  tableUtils.hpp  valueArray.hpp  valuearray.hpp  vectorFixedCapacity.hpp  vectorSso.hpp
dfg/dataAnalysis/: correlation.hpp  smoothWithNeighbourAverages.hpp  smoothWithNeighbourMedians.hpp  smoothwithneighbourmedians.hpp
dfg/debug/: debugAssert.hpp  printToDebugDisplay.hpp  structuredExceptionHandling.cpp  structuredExceptionHandling.h
dfg/func/: memFunc.hpp  memFuncMedian.hpp
dfg/io/: BasicIStreamCRTP.hpp  BasicIfStream.hpp  BasicImStream.hpp  BasicOmcByteStream.hpp  DelimitedTextReader.hpp  DelimitedTextWriter.hpp  EndOfLineTypes.hpp  IfStream.hpp  IfmmStream.hpp  ImStreamWithEncoding.hpp  ImcByteStream.hpp  OfStream.hpp  OmcByteStream.hpp  OmcStreamWithEncoding.hpp  StreamBufferMem.hpp  checkBom.hpp  createInputStream.hpp  cstdio.hpp  fileToByteContainer.hpp  nullOutputStream.hpp  openOfStream.hpp  readBinary.hpp  seekFwdToLine.hpp  textEncodingTypes.hpp  textencodingtypes.hpp  widePathStrToFstreamFriendlyNonWide.cpp  widePathStrToFstreamFriendlyNonWide.hpp
dfg/iter/: CustomAccessIterator.hpp  FunctionValueIterator.hpp  IsContiguousMemoryIterator.hpp  OstreamIterator.hpp  RawStorageIterator.hpp  interleavedIterator.hpp  interleavediterator.hpp  iscontiguousmemoryiterator.hpp  iteratorTemplate.hpp  szIterator.hpp
dfg/math/: FormulaParser.cpp  FormulaParser.hpp  constants.hpp  evalPolynomial.hpp  interpolationLinear.hpp  interval.hpp  pdf.hpp  pow.hpp  roundedUpToMultiple.hpp  sign.hpp  zeroPosPol1.hpp
dfg/net/: serverHttp.hpp
dfg/numeric/: accumulate.hpp  algNumeric.hpp  average.hpp  integrate_function_adapt_simpson.h  integration.hpp  median.hpp  percentile.hpp  percentileRange.hpp  rescale.hpp  trimByPercentileRange.hpp  vectorizingLoop.hpp
dfg/os/: OutputFile.hpp  (+8 more)
dfgExamples/: dfg_examples.pro
dfgTest/: CMakeLists.txt  Makefile  cpp.hint  dfgTest.cpp  dfgTest.hpp  dfgTest.sln  dfgTest.vcxproj  dfgTest.vcxproj.filters  dfgTestAlg.cpp  dfgTestBase.cpp  dfgTestBits.cpp  dfgTestCharts.cpp  dfgTestColour.cpp  dfgTestConcurrency.cpp  dfgTestCont.cpp  dfgTestContMapVectorPerformance.cpp  dfgTestCont_MapSetVector.cpp  dfgTestCont_TableCsv.cpp  dfgTestCont_tables.cpp  dfgTestCrypt.cpp  dfgTestCsvPerformance.cpp  dfgTestDataAnalysis.cpp  dfgTestDebug.cpp  dfgTestFunc.cpp  dfgTestGuid.cpp  dfgTestHash.cpp  dfgTestIncludeAll.cpp  dfgTestIo.cpp  dfgTestIoDelimitedTextReader.cpp  dfgTestIoDelimitedTextWriter.cpp  dfgTestIter.cpp  dfgTestMath.cpp  dfgTestMemory.cpp  dfgTestMisc.cpp  dfgTestNumeric.cpp  dfgTestOs.cpp  dfgTestPhysics.cpp  dfgTestRand.cpp  dfgTestStr.cpp  dfgTestStr_StringViews.cpp  (+7 more)
dfgTest/testfiles/: csvConfigTest_0.csv  csvConfigTest_1.csv  csvConfigTest_2.csv  csvtestUTF16BE_BOM_eol_n.csv  csvtestUTF16LE_BOM_eol_n.csv  csvtestUTF32BE_BOM_eol_n.csv  csvtestUTF32LE_BOM_eol_n.csv  csvtestUTF8_BOM_eol_n.csv  matrix_10x10_1to100_eol_r.txt  matrix_10x10_1to100_eol_rn.txt  matrix_200x200.txt  matrix_3x3.txt  smallBinary.binary  testfile_200x200.txt  testfile_200x200_CellTexts.txt  utf8_with_BOM.txt
dfgTest/testfiles/csv_testfiles/: csvtestUTF16BE_BOM_sep_09_eol_n.csv  csvtestUTF16BE_BOM_sep_2C_eol_r.csv  csvtestUTF16BE_BOM_sep_3B_eol_n.csv  csvtestUTF16LE_BOM_sep_09_eol_n.csv  csvtestUTF16LE_BOM_sep_09_eol_rn.csv  csvtestUTF16LE_BOM_sep_2C_eol_n.csv  csvtestUTF16LE_BOM_sep_2C_eol_r.csv  csvtestUTF16LE_BOM_sep_2C_eol_rn.csv  csvtestUTF16LE_BOM_sep_3B_eol_n.csv  csvtestUTF16LE_BOM_sep_3B_eol_rn.csv  csvtestUTF32BE_BOM_sep_09_eol_n.csv  csvtestUTF32BE_BOM_sep_2C_eol_r.csv  csvtestUTF32BE_BOM_sep_3B_eol_n.csv  csvtestUTF32LE_BOM_sep_09_eol_n.csv  csvtestUTF32LE_BOM_sep_2C_eol_r.csv  csvtestUTF32LE_BOM_sep_3B_eol_n.csv  csvtestUTF8_BOM_sep_09_eol_n.csv  csvtestUTF8_BOM_sep_09_eol_rn.csv  csvtestUTF8_BOM_sep_1F_eol_n.csv  csvtestUTF8_BOM_sep_2C_eol_r.csv  csvtestUTF8_BOM_sep_2C_eol_rn.csv  csvtestUTF8_BOM_sep_3B_eol_n.csv  csvtestUTF8_BOM_sep_3B_eol_rn.csv  csvtest_plain_ascii_3x3_sep_2C_eol_n.csv  csvtest_plain_ascii_3x3_sep_3B_eol_r.csv
dfgTestQt/: dfgTestCsvItemModel.cpp  dfgTestCsvTableView.cpp  dfgTestQt.cpp  dfgTestQt.pro  dfgTestQt.vcxproj  dfgTestQt.vcxproj.filters  dfgTestQt_gtestPrinters.hpp  main.cpp
misc/: TableCsv_optimization.csv  TableCsv_optimizations.md  TableSz_optimization.csv  csvPerformanceRuns.csv  csvPerformanceRuns.md  csvPerformanceRunsVC2015.csv  csvPerformanceRuns_sorted_by_run_order.csv  csvPerformanceRuns_sorted_by_type.csv  csvPerformanceRuns_tableCsv.csv  dfgTestQt_Clang14_libc++_Qt_624_linker_errors.txt  example_of_undefined_behaviour_trivial_pair.md  parsing_optimizations.csv
(+194 files in other folders)
